--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,37 @@
-.container {
-	max-width: 500px;
-	margin: 30px auto;
-	overflow: auto;
-	min-height: 300px;
-	border: 2px solid chartreuse;
-	padding: 30px;
-	border-radius: 10px;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
+* {
+  font-family: "Plus Jakarta Sans";
+}
+
+html, body { 
+  height: 100%;
+
+}
+
+.app-container {
+  max-width: 500px;
+  height: 90vh;
+  margin: 15px auto;
+  overflow: auto;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  color: #fff;
+  background-image: url('https://c.tenor.com/0xn-VNFkApYAAAAC/21-pizza.gif');
+  background-size: cover;
+  padding: 15px;
+}
+
+.container-body{
+  display: block;
+  min-height: 420px;
+  z-index: 1;
+}
+
+.product-sum{
+  display:flex;
+  gap: 20px;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
 }
