--- a/src/components/CompanyHeader.css
+++ b/src/components/CompanyHeader.css
@@ -1,8 +1,23 @@
-* {
-    color: #fff
+.company-intro {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 100%;
+    align-items: center;
+    gap: 10px;
+    
 }
 
-h1{
+.logo {
+    height: 40px;
+    width: 40px;
+}
+
+.company-intro h1 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    display: block;
     text-align: center;
-    font-size: 16px;
+    margin: 0;
+    color: #eee;
 }
