--- a/src/components/ProductsTotal.css
+++ b/src/components/ProductsTotal.css
@@ -9,13 +9,6 @@
     background-color: #222;
 }
 
-.product-sum-container button {
-    border-radius: 15px;
-    background-color: #2a573f;
-    height: 40px;
-    font-weight: 700;
-}
-
 .value-container {
     bottom: 70px;
     display: flex;
@@ -25,14 +18,7 @@
     color: #eee;
 }
 
-.value-container h3 {
-    display: block;
-    padding: 0;
-    margin: 0;
-    font-weight: 700;
-}
-
-.value-container h5 {
+.value-container h3, h5 {
     display: block;
     padding: 0;
     margin: 0;
