--- a/src/App.css
+++ b/src/App.css
@@ -4,34 +4,43 @@
   font-family: "Plus Jakarta Sans";
 }
 
-html, body { 
+html,
+body,
+#root {
   height: 100%;
-
 }
 
 .app-container {
   max-width: 500px;
-  height: 90vh;
-  margin: 15px auto;
+  height: 100%;
   overflow: auto;
-  border: 2px solid #eee;
   border-radius: 10px;
   color: #fff;
   background-image: url('https://c.tenor.com/0xn-VNFkApYAAAAC/21-pizza.gif');
   background-size: cover;
+  margin: 0 auto;
+}
+
+.main {
+  position: relative;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  margin: 15px;
   padding: 15px;
+  height: calc(100% - 64px);
 }
 
-.container-body{
+.container-body {
   display: block;
-  min-height: 420px;
-  z-index: 1;
+  height: calc(100% - 300px);
+  overflow: auto;
 }
 
-.product-sum{
-  display:flex;
-  gap: 20px;
-  bottom: 0;
-  height: 100px;
-  width: 100%;
+
+@media (max-height: 667px) {
+  .container-body {
+    height: 390px;
+  }
+
+
 }
