--- a/src/components/ProductsTotal.css
+++ b/src/components/ProductsTotal.css
@@ -1,12 +1,16 @@
 .product-sum-container {
+    position: absolute;
+    left: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 70px;
     height: 60px;
-    width: 100%;
-    border-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     background-color: #222;
+    transform: translateX(-50%) translateY(-50%);
+    top: calc(100% - 30px);
+    width: 100%;
 }
 
 .value-container {
