--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,8 @@ body,
   overflow: auto;
   border-radius: 10px;
   color: #fff;
-  background-image: url('https://c.tenor.com/0xn-VNFkApYAAAAC/21-pizza.gif');
-  background-size: cover;
+  /* background-image: url('https://c.tenor.com/0xn-VNFkApYAAAAC/21-pizza.gif'); */
+  /* background-size: cover; */
   margin: 0 auto;
 }
 
